--- a/client/src/App.css
+++ b/client/src/App.css
@@ -801,7 +801,6 @@ p {
 }
 
 /* library page */
-/* Library.css */
 
 .library-container {
   padding: 20px;
@@ -812,7 +811,7 @@ p {
 .library-title {
   text-align: center;
   margin-bottom: 20px;
-  color: #ffa500; /* Orange color for the title */
+  color: #ffa500;
 }
 
 .ebook-grid {
@@ -823,15 +822,21 @@ p {
 
 .ebook-item {
   background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
+  padding: 15px;
+  border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  width: calc(33.33% - 20px); /* Adjust width as per your design */
-  transition: background-color 0.3s ease;
+  width: calc(33.33% - 20px);
+  text-align: center; /* Center contents horizontally */
 }
 
-.ebook-item:hover {
-  background-color: #ffe0b2; /* Light orange on hover */
+.ebook-cover {
+  width: 100%;
+  max-width: 100%;
+  height: 300px;
+  display: block;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  object-fit: contain;
 }
 
 .ebook-title {
@@ -846,6 +851,7 @@ p {
 
 .ebook-actions {
   display: flex;
+  justify-content: center; /* Center buttons horizontally */
   gap: 10px;
 }
 
@@ -865,6 +871,41 @@ p {
 .download-button {
   background-color: #333; /* Dark background for the Download button */
   color: #fff;
+}
+
+.lds-hourglass {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 80vh;
+  top: 60px;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 8px;
+  box-sizing: border-box;
+  border: 32px solid #000;
+  border-color: #000 transparent;
+  animation: 1.2s infinite lds-hourglass;
+}
+
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
 }
 
 footer {
@@ -1140,6 +1181,12 @@ footer .bottom-details .bottom_text {
     display: flex;
     flex-direction: column;
   }
+  .programs-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
   .nav-links ul:first-of-type {
     padding-top: 20px;
   }
@@ -1197,6 +1244,14 @@ footer .bottom-details .bottom_text {
     display: flex;
     flex-direction: column;
     display: block;
+  }
+
+  .ebook-grid {
+    flex-direction: column;
+  }
+
+  .ebook-item {
+    width: 100%; /* Two columns on smaller screens */
   }
 
   .content .top .logo-details {
