--- a/client/src/App.css
+++ b/client/src/App.css
@@ -91,7 +91,7 @@ html {
 .home {
   background: url("/home3.jpg") center/cover no-repeat grey;
   background-blend-mode: multiply;
-  height: 90vh;
+  height: 100vh;
   overflow: hidden;
   background-attachment: fixed;
   background-size: cover;
@@ -112,7 +112,7 @@ html {
   display: inline-block;
   font-size: 4vw;
   color: transparent;
-  background-image: linear-gradient(90deg, #ff0000, #00ff00, yellow, #ff0000);
+  background: orange;
   background-size: 200%;
   background-clip: text;
   -webkit-background-clip: text;
@@ -808,10 +808,18 @@ p {
   min-height: 100vh;
 }
 
-.library-title {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #ffa500;
+.library-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.library-link {
+  margin-left: auto;
+}
+.library-header a {
+  margin-left: auto;
 }
 
 .ebook-grid {
@@ -851,12 +859,11 @@ p {
 
 .ebook-actions {
   display: flex;
-  justify-content: center; /* Center buttons horizontally */
+  justify-content: center;
   gap: 10px;
 }
 
-.view-button,
-.download-button {
+.view-button {
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -864,13 +871,11 @@ p {
 }
 
 .view-button {
-  background-color: #ffa500; /* Orange background for the View button */
+  background-color: #ffa500;
   color: #fff;
 }
-
-.download-button {
-  background-color: #333; /* Dark background for the Download button */
-  color: #fff;
+.view-button:hover {
+  background-color: #f96106;
 }
 
 .lds-hourglass {
@@ -945,8 +950,8 @@ footer .content .top {
   display: flex;
 }
 .content .top .media-icons a {
-  height: 40px;
-  width: 40px;
+  height: 37px;
+  width: 37px;
   margin: 0 8px;
   border-radius: 50%;
   text-align: center;
